# rag-with-me

./: .env-example  .gitignore  PLAN-base.md  README.ko.md  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: PLAN-details.md
.claude/skills/learner-mode/: SKILL.md
config/: default.yaml
eval_data/: gold_qa.json
src/rag_agent/: __main__.py  config.py  logging_config.py  main.py
src/rag_agent/adapters/chunkers/: __init__.py  fixed_size_chunker.py  markdown_header_chunker.py  semantic_chunker.py
src/rag_agent/adapters/doc_loaders/: markdown_loader.py
src/rag_agent/adapters/embedders/: azure_openai_embedder.py
src/rag_agent/adapters/inbound/: cli.py
src/rag_agent/adapters/llms/: azure_openai_llm.py
src/rag_agent/adapters/outbound/: __init__.py
src/rag_agent/adapters/rerankers/: no_reranker.py
src/rag_agent/application/: __init__.py  evaluate.py  ingest.py  query.py  query_graph.py
src/rag_agent/domain/: metrics.py  models.py  pipeline.py  ports.py
src/rag_agent/ports/: __init__.py  chunker.py  doc_loader.py  embedder.py  llm.py  reranker.py  retriever.py  vector_store.py
tests/fakes/: __init__.py  fake_chunk_repository.py  fake_chunker.py  fake_doc_loader.py  fake_document_repository.py  fake_embedder.py  fake_image_describer.py  fake_llm.py  fake_reranker.py  fake_retriever.py  fake_vector_store.py
tests/unit/: test_bm25.py  test_evaluate.py  test_hybrid.py  test_ingest.py  test_ingest_edge.py  test_metrics.py  test_models.py  test_models_edge.py  test_pipeline.py  test_query.py  test_query_edge.py  test_query_graph.py
(+37 files in other folders)
