[project]
name = "rag-with-me"
version = "0.1.0"
description = "A modular RAG agent built with LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "cohere>=5.20.7",
    "openai>=2.28.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.3.0",
]
