[project]
name = "rag-with-me"
version = "0.1.0"
description = "A modular RAG agent built with LangGraph"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.5",
    "cohere>=5.20.7",
    "langgraph>=1.1.2",
    "openai>=2.28.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pymupdf==1.27.2",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rag_agent --cov-report=term-missing"
